# base-any

./: README.md  baseU.txt  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
src/base_any/: __init__.py  __main__.py  baseAny.py
tests/: test_basic.py
